--- a/package.json
+++ b/package.json
@@ -2,6 +2,9 @@
   "name": "Otakufinder",
   "version": "1.1.1",
   "description": "Otakufinder: A tinder clone for anime nerds",
+  "scripts": {
+  "start": "ionic serve"
+  },
   "dependencies": {
     "gulp": "^3.5.6",
     "gulp-sass": "^2.0.4",
